# opencv-healthcare

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Cython_algorithms/: Dockerfile  compile_and_move.sh  gait_speed_walk_overall.c  gait_speed_walk_overall.pyx  ml.ipynb  requirements.txt  setup.py  setup_docker.py  sit_stand_overall.c  sit_stand_overall.cpp  sit_stand_overall.pyx  test.py  tug_overall.c  tug_overall.pyx
algorithms/: GWST_final_results.csv  detectron_test.ipynb  gait_speed_walk.ipynb  gait_speed_walk_overall_cython.prof  gait_speed_walk_overall_python.prof  gswt.ipynb  python_arm_curler_test.ipynb  python_arm_curler_test.py  sit_stand_algorithm.ipynb  sit_stand_calcOfPyrLk.ipynb  sit_stand_cython.prof  sit_stand_optical_flow.ipynb  sit_stand_optical_flow_kalman_filter.ipynb  sit_stand_overall.ipynb  sit_stand_overall.py  sit_stand_python.prof  solving_foot_contact.ipynb
algorithms/5ST_ml/: 5ST_rf_model_2024-10-04 02:43:44.343363.pkl  CST_final_results.csv  CST_results.csv  best_random_forest_model.pkl  ml.ipynb  synthetic_data_sit_stand.csv
algorithms/GSWT_ml/: GWST_final_results.csv  gait_speed_walk_test.csv  gswt_random_forest_model.pkl  ml.ipynb  synthetic_data.csv  synthetic_data_improved.csv
algorithms/TUG_ml/: TUG_final_results.csv  TUG_rf_model_2024-10-06 06:03:57.429347.pkl  Updated_TUG_final_results.csv  ml.ipynb  synthetic_data_sit_stand.csv  (+1 more)
python_arm_curler/: __init__.py
server/: Dockerfile  main.py  requirements.txt  update_docker_image.sh
sit_stand_algorithm/: __init__.py
src/: main.cpp  sit_stand_overall.cpp
(+21 files in other folders)
